// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should render 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <ul
      class="root"
    >
      <li
        class="li"
      >
        <div
          class="mainSection"
        >
          Test
        </div>
      </li>
      <li
        class="li"
      >
        <div
          class="mainSection"
        >
          Test
        </div>
      </li>
      <li
        class="li"
      >
        <div
          class="mainSection"
        >
          Test
        </div>
      </li>
      <li
        class="li"
      >
        <div
          class="mainSection"
        >
          Test
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`List should render with subsection left 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <ul
      class="root"
    >
      <li
        class="li"
      >
        <div>
          <div
            class="root"
            role="img"
            style="background-image: url();"
          />
        </div>
        <div
          class="mainSection"
        >
          Test
        </div>
      </li>
      <li
        class="li"
      >
        <div>
          <div
            class="root"
            role="img"
            style="background-image: url();"
          />
        </div>
        <div
          class="mainSection"
        >
          Test
        </div>
      </li>
      <li
        class="li"
      >
        <div>
          <div
            class="root"
            role="img"
            style="background-image: url();"
          />
        </div>
        <div
          class="mainSection"
        >
          Test
        </div>
      </li>
      <li
        class="li"
      >
        <div>
          <div
            class="root"
            role="img"
            style="background-image: url();"
          />
        </div>
        <div
          class="mainSection"
        >
          Test
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`List should render with subsection right 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <ul
      class="root"
    >
      <li
        class="li"
      >
        <div>
          <div
            class="root"
            role="img"
            style="background-image: url();"
          />
        </div>
        <div
          class="mainSection"
        >
          Test
        </div>
        <div>
          <button
            aria-selected="false"
            class="lotta-base-button variant__default lotta-button"
            role="button"
            type="button"
          >
            <span
              class="lotta-button_text"
            >
              Test
            </span>
          </button>
        </div>
      </li>
      <li
        class="li"
      >
        <div
          class="mainSection"
        >
          Test
        </div>
        <div>
          <button
            aria-selected="false"
            class="lotta-base-button variant__default lotta-button"
            role="button"
            type="button"
          >
            <span
              class="lotta-button_text"
            >
              Test
            </span>
          </button>
        </div>
      </li>
      <li
        class="li"
      >
        <div
          class="mainSection"
        >
          Test
        </div>
        <div>
          <button
            aria-selected="false"
            class="lotta-base-button variant__default lotta-button"
            role="button"
            type="button"
          >
            <span
              class="lotta-button_text"
            >
              Test
            </span>
          </button>
        </div>
      </li>
      <li
        class="li"
      >
        <div
          class="mainSection"
        >
          Test
        </div>
        <div>
          <button
            aria-selected="false"
            class="lotta-base-button variant__default lotta-button"
            role="button"
            type="button"
          >
            <span
              class="lotta-button_text"
            >
              Test
            </span>
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
